# cpp_tp_2020_2

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  main.out  test1.txt
DZ1.xcodeproj/: project.pbxproj
DZ1.xcodeproj/project.xcworkspace/xcuserdata/ivangorshkov.xcuserdatad/: UserInterfaceState.xcuserstate
DZ1.xcodeproj/xcuserdata/ivangorshkov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
DZ1/include/: matrix.h  utils.h
DZ1/src/: main.c  matrix.c  utils.c
linters/: run.sh
project/: CMakeLists.txt  main.c
project/all/include/: utils.h
project/all/src/: utils.c
project/dynamic/include/: libdyn.h  parallel_alg.h
project/dynamic/src/: libdyn.c  parallel_alg.c
project/include/: matrix.h  utils.h
project/src/: main.c  matrix.c  utils.c
project/static/include/: consistent_alg.h  libstat.h
project/static/src/: consistent_alg.c  libstat.c
project/tests/: CMakeLists.txt
project/tests/data/: in_1.txt  in_2.txt  in_4.txt  out.txt  out_3.txt
project/tests/include/: matrix_utils.hpp  test_utils.h  utils.h
project/tests/src/: MatrixTest.cpp  UtilsTest.cpp  main.cpp  matrix_utils_test.cpp  test_consistent_alg.cpp  test_dyn.cpp  test_libs.cpp  test_parallel_alg.cpp  test_static.cpp  test_utils.cpp  utils.cpp
