FIND_PACKAGE(GTest REQUIRED)
FIND_PACKAGE(Threads REQUIRED)
INCLUDE_DIRECTORIES("${GTEST_INCLUDE_DIRS}")

PROJECT(tests)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -lpthread")


INCLUDE_DIRECTORIES(include)

ADD_EXECUTABLE(${PROJECT_NAME}
        ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/src/test_static.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/src/test_dyn.cpp)


ADD_TEST(NAME Test COMMAND ${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/project/tests/)
