FIND_PACKAGE(GTest REQUIRED)
FIND_PACKAGE(Threads REQUIRED)
INCLUDE_DIRECTORIES("${GTEST_INCLUDE_DIRS}")

PROJECT(tests)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -lpthread –ldl")


INCLUDE_DIRECTORIES(include)

ADD_EXECUTABLE(${PROJECT_NAME}
        ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/src/test_libs.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/src/test_utils.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/src/test_consistent_alg.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/src/test_parallel_alg.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} parallellib consistentlib)
ADD_TEST(NAME Test COMMAND ${PROJECT_NAME} ${CMAKE_SOURCE_DIR} /project/tests/data/)
